force-app/main/default/src/objects/Survey_Automation_MVN__mdt/Survey_Automation_MVN__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for survey automation.</description>
    <label>Survey Automation</label>
    <pluralLabel>Survey Automation</pluralLabel>
</CustomObject>