force-app/main/default/src/objects/Survey_Automation_MVN__mdt/fields/Allow_Guest_User_Response_MVN__c.field-meta.xml
<CustomField>
    <fullName>Allow_Guest_User_Response_MVN__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Option when sending survey invitation</description>
    <inlineHelpText>Option when sending survey invitation</inlineHelpText>
    <label>Allow Guest User Response</label>
    <type>Checkbox</type>
</CustomField>