force-app/main/default/src/objects/Survey_Automation_MVN__mdt/fields/Allow_Participant_Access_Response_MVN__c.field-meta.xml
<CustomField>
    <fullName>Allow_Participant_Access_Response_MVN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Option when sending survey invitation</description>
    <inlineHelpText>Option when sending survey invitation</inlineHelpText>
    <label>Allow Participant Access Their Response</label>
    <type>Checkbox</type>
</CustomField>