force-app/main/default/src/objects/Survey_Automation_MVN__mdt/fields/Collect_Anonymous_Response_MVN__c.field-meta.xml
<CustomField>
    <fullName>Collect_Anonymous_Response_MVN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Option when sending survey invitation</description>
    <inlineHelpText>Option when sending survey invitation</inlineHelpText>
    <label>Collect Anonymous Response</label>
    <type>Checkbox</type>
</CustomField>