force-app/main/default/src/objects/Survey_Automation_MVN__mdt/fields/Community_Name_MVN__c.field-meta.xml
<CustomField>
    <fullName>Community_Name_MVN__c</fullName>
    <description>Name of the community in which public (non-authenticated) surveys are exposed</description>
    <inlineHelpText>Name of the community in which public (non-authenticated) surveys are exposed</inlineHelpText>
    <label>Community Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>