force-app/main/default/src/objects/Survey_Automation_MVN__mdt/fields/Email_Survey_Trigger_MVN__c.field-meta.xml
<CustomField>
    <fullName>Email_Survey_Trigger_MVN__c</fullName>
    <description>Words that trigger the sending of a survey</description>
    <inlineHelpText>Words that trigger the sending of a survey</inlineHelpText>
    <label>Email Survey Trigger</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>